# TraceMem

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset/: locomo10.json
evaluation/locomo/: add.py  answer.py  build.py  evals.py  generate_scores.py  llm_judge.py
results/: conversation_results_4.1_mini.json  conversation_results_4o_mini.json  evals.py  generate_scores.py
src/tracemem/cache/: redis_manager.py  redis_processor.py  redis_provider.py
src/tracemem/configs/: bm25.py  chroma.py  client.py  config.py  embedding.py
src/tracemem/memory/: agentic_search.py  categorizer.py  memory.py  persona_extractor.py  prompts.py  segmenter.py  summarizer.py
src/tracemem/storage/: episode.py  experience.py  semantic.py  thread.py
src/tracemem/utils/: data_utils.py
